--- a/static-on-html/index.html
+++ b/static-on-html/index.html
@@ -15,7 +15,7 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gps-entity-place="latitude: 4.592425516681149; longitude: -74.19129607145788;" gltf-model="assets/articuno/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
+        <a-entity gps-entity-place="latitude: 4.592428; longitude: -74.191264;" gltf-model="assets/articuno/scene.gltf" rotation="0 180 0" position="1 1 1" scale="0.5 0.5 0.5" animation-mixer scale="0.15 0.15 0.15"/>
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
     
