--- a/v3/index.html
+++ b/v3/index.html
@@ -17,8 +17,8 @@
     >
       <a-box
         look-at="[gps-camera]"
-        scale="150 150 150"
-        gps-entity-place="latitude: 4.592425516681149; longitude: -74.19129607145788;"
+        scale="10 10 10"
+        gps-entity-place="latitude: 4.592428; longitude: -74.191264;"
       ></a-box>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
