--- a/static-on-html/index.html
+++ b/static-on-html/index.html
@@ -15,7 +15,8 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gps-entity-place="latitude:4.592428; longitude:-74.191264;" 
+        <a-entity 
+        gps-entity-place="latitude:4.592428; longitude:-74.191264;" 
         gltf-model="assets/articuno/scene.gltf" 
         rotation="50 180 0" 
         scale="0.5 0.5 0.5" 
