--- a/static-on-html/index.html
+++ b/static-on-html/index.html
@@ -20,6 +20,7 @@
         gltf-model="assets/articuno/scene.gltf" 
         rotation="50 180 0" 
         scale="0.5 0.5 0.5" 
+        position="1 1 1"
         animation-mixer scale="0.01 0.01 0.01"/>
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
