--- a/v3/index.html
+++ b/v3/index.html
@@ -15,11 +15,7 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-      <a-box
-        look-at="[gps-camera]"
-        scale="0.5 0.5 0.5"
-        gps-entity-place="latitude: 4.592430; longitude: -74.191280;"
-      ></a-box>
+    <a-entity  obj-model = "obj: Custodio/Custodio.obj; mtl: Custodio/Custodio.mtl" > </a-entity > 
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
