--- a/Dino/index.html
+++ b/Dino/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>a</title>
+        <title>b</title>
         <!-- script de A-Frane version1 1.0.0 -->
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <!-- script de AR.JS con soporte de marker + location -->
@@ -11,7 +11,7 @@
             <a-marker preset="hiro">
                 <a-entity
                 position="0 0 0"
-                scale="0.02 0.02 0.02"
+                scale="0.009 0.009 0.009"
                 gltf-model="articuno/scene.gltf"
               ></a-entity>
             </a-marker>
