--- a/Marker/index.html
+++ b/Marker/index.html
@@ -5,11 +5,18 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <a-marker preset="hiro">
+    <a-marker type='pattern' href='articuno/articuno.patt'>
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
+    </a-marker>
+    <a-marker preset="hiro">
+      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="dragonite/scene.gltf"></a-entity>
+    </a-marker>
+    <a-marker preset="kanji">
+      <a-entity position="0 0 0" scale="0.009 0.01 0.01" gltf-model="magnemite/scene.gltf"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
+
 </body>
 
 </html>
