--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>A</title>
+  <title>B</title>
 </head>  
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -11,12 +11,12 @@
     <a-marker type='pattern' href='articuno/articuno.patt'>
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
     </a-marker>
-    <a-marker preset="hiro">
+    <!-- <a-marker preset="hiro">
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="dragonite/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.009 0.01 0.01" gltf-model="magnemite/scene.gltf"></a-entity>
-    </a-marker>
+    </a-marker> -->
     <a-entity camera></a-entity>
   </a-scene>
 
