--- a/Marker/index.html
+++ b/Marker/index.html
@@ -8,7 +8,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <a-marker type='pattern' url='articuno/articuno.patt'>
+    <a-marker type='pattern' url='https://guaudog.github.io//Marker/articuno/articuno.patt'>
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
     </a-marker>
     <!-- <a-marker preset="hiro">
