--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>a</title>
+  <title>b</title>
 </head>  
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -8,15 +8,15 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <a-marker type='pattern' url='https://guaudog.github.io//Marker/articuno/articuno.patt'>
+    <!-- <a-marker type='pattern' url='https://guaudog.github.io//Marker/articuno/articuno.patt'>
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
-    </a-marker>
-    <!-- <a-marker preset="hiro">
+    </a-marker> -->
+    <a-marker preset="hiro">
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="dragonite/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.01 0.01 0.01" gltf-model="magnemite/scene.gltf"></a-entity>
-    </a-marker> -->
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
