--- a/Hiro/index.html
+++ b/Hiro/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <!-- script de A-Frane version1 1.0.0 -->
-        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-        <!-- script de AR.JS con soporte de marker + location -->
-        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    </head>
-    <body style="margin : 0px; overflow: hidden;">
+<!-- <!DOCTYPE html>
+<html>-->
+  <head>
+      <title>a</title>
+        
+        <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    
+        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script> -->
+    </head> 
+       <!--<body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
             <a-marker preset="hiro">
                 <a-sphere position="0 0 0" radius="0.6" color="#EF2D5E"></a-sphere>
@@ -14,4 +15,22 @@
         <a-entity camera></a-entity>
         </a-scene>
     </body>
+</html> -->
+
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        ></a-entity>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
