--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>C</title>
+  <title>D</title>
 </head>  
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -12,10 +12,10 @@
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
     </a-marker> -->
     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="dragonite/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.0005 0.0005 0.0005" gltf-model="dragonite/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.01 0.01 0.01" gltf-model="magnemite/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="magnemite/scene.gltf"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
