--- a/Hiro/index.html
+++ b/Hiro/index.html
@@ -16,7 +16,7 @@
 
 <html>
   <head>
-    <title>B</title>
+    <title>a</title>
   </head> 
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <!-- we import arjs version without NFT but with marker + location based support -->
@@ -26,7 +26,7 @@
       <a-marker preset="hiro">
         <a-entity
           position="0 0 0"
-          scale="0.03 0.03 0.03"
+          scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         ></a-entity>
       </a-marker>
