--- a/Hiro/index.html
+++ b/Hiro/index.html
@@ -1,10 +1,10 @@
-<!-- <!DOCTYPE html>
-<html>-->
+<!DOCTYPE html>
+<html>
         
-        <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     
         <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script> -->
-       <!--<body style="margin : 0px; overflow: hidden;">
+       <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
             <a-marker preset="hiro">
                 <a-sphere position="0 0 0" radius="0.6" color="#EF2D5E"></a-sphere>
@@ -12,14 +12,13 @@
         <a-entity camera></a-entity>
         </a-scene>
     </body>
-</html> -->
-
+</html>
+<!-- 
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>a</title>
-  </head> 
+  <head></head>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <!-- we import arjs version without NFT but with marker + location based support -->
+ 
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
@@ -33,4 +32,4 @@
       <a-entity camera></a-entity>
     </a-scene>
   </body>
-</html>
+</html> -->
