--- a/Hiro/index.html
+++ b/Hiro/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
         
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     
-        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script> -->
+        <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
        <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
             <a-marker preset="hiro">
@@ -12,8 +12,8 @@
         <a-entity camera></a-entity>
         </a-scene>
     </body>
-</html>
-<!-- 
+</html> -->
+
 <!DOCTYPE html>
 <html>
   <head></head>
@@ -32,4 +32,4 @@
       <a-entity camera></a-entity>
     </a-scene>
   </body>
-</html> -->
+</html>
