--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,8 @@
 <html>
+
 <head>
   <title>#</title>
-</head>  
+</head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -10,13 +11,18 @@
   <a-scene embedded arjs>
     <!-- <a-marker type='pattern' url='https://guaudog.github.io//Marker/articuno/articuno.patt'>
       <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
-    </a-marker> -->
-    <a-marker preset="hiro">
+    </a-marker>
+     <a-marker preset="hiro">
       <a-entity position="0 0 0" scale="0.00009 0.00009 0.00009" rotation="90 0 0" gltf-model="../dragonite/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="../magnemite/scene.gltf"></a-entity>
+    </a-marker> -->
+
+    <a-marker preset="hiro">
+      <a-entity position="0 0 0" scale="0.09 0.09 0.09" rotation="0 0 0" gltf-model="retro_computer/scene.gltf"></a-entity>
     </a-marker>
+
     <a-entity camera></a-entity>
   </a-scene>
 
