--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>A</title>
+  <title>K</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -21,6 +21,10 @@
 
     <a-marker preset="hiro">
       <a-entity position="0 0 0" scale="0.09 0.09 0.09" rotation="0 0 0" gltf-model="retro_computer/scene.gltf"></a-entity>
+    </a-marker>
+
+    <a-marker preset="kanji">
+      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="photoshop_logo/scene.gltf"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
