--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Ñ</title>
+  <title>A</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -20,7 +20,7 @@
     </a-marker> -->
 
     <a-marker preset="hiro">
-      <a-entity position="0 0 -2" scale="3 3 3" gltf-model="retro_computer/scene.gltf"></a-entity>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="retro_computer/scene.gltf"></a-entity>
     </a-marker>
 
     <a-marker preset="kanji">
