--- a/Marker/index.html
+++ b/Marker/index.html
@@ -24,7 +24,7 @@
     </a-marker>
 
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.001 0.001 0.001" gltf-model="photoshop_logo/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.01 0.01 0.01" gltf-model="gameboy/scene.gltf"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
