--- a/video/index.html
+++ b/video/index.html
@@ -43,8 +43,7 @@
     <div style='position: fixed; top: 10px; width:inherit; text-align: center; z-index: 1;'>
         <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - Check out the repository !
     </div>
-    <a-scene embedded arjs
-        artoolkit='sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
+    <a-scene embedded arjs>
         <a-assets>
             <video id="vid" src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191" loop="true" crossorigin>
             <!-- <video id="vid" src="videoplayback.mp4" loop="true" crossorigin> -->
