--- a/video/index.html
+++ b/video/index.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-    <title>Q</title>
+    <title>B</title>
     <!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
     <script>
         AFRAME.registerComponent('vidhandler', {
             // ...
@@ -40,15 +39,14 @@
         <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - Check out the repository !
     </div>
     <a-scene embedded arjs>
-
-        <a-video id="vid" loop="true" crossorigin
-            src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
-        </a-video>
+        
+            <a-video id="vid" loop="true" crossorigin
+                src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
+            </a-video>
 
 
         <a-marker id="memarker" preset="hiro" vidhandler>
-            <a-plane position='1 1 1' scale="2 2 2" width="2" rotation="-90 0 0"
-                material='transparent:true;opacity: 0.7;src:#vid'>
+            <a-plane position='1 1 1' scale="2 2 2" width="2" rotation="-90 0 0" material='transparent:true;opacity: 0.7;src:#vid'>
             </a-plane>
         </a-marker>
 
