--- a/video/index.html
+++ b/video/index.html
@@ -40,9 +40,13 @@
     </div>
     <a-scene embedded arjs>
         
-            <a-video id="vid" loop="true" crossorigin
+            <!-- <a-video id="vid" loop="true" crossorigin
                 src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
+            </a-video> -->
+            <a-video id="vid" loop="true" crossorigin
+                src="videoplayback.mp4">
             </a-video>
+
 
 
         <a-marker id="memarker" preset="hiro" vidhandler>
