--- a/video/index.html
+++ b/video/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>B</title>
+    <title>V</title>
     <!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -40,12 +40,12 @@
     </div>
     <a-scene embedded arjs>
         
-            <!-- <a-video id="vid" loop="true" crossorigin
-                src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
-            </a-video> -->
             <a-video id="vid" loop="true" crossorigin
-                src="videoplayback.mp4">
+                src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
             </a-video>
+            <!-- <a-video id="vid" loop="true" crossorigin
+                src="videoplayback.mp4">
+            </a-video> -->
 
 
 
