--- a/Marker/index.html
+++ b/Marker/index.html
@@ -20,11 +20,15 @@
     </a-marker> -->
 
     <a-marker preset="hiro">
-      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="retro_computer/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
     </a-marker>
 
     <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="gameboy/scene.gltf"></a-entity>
+    </a-marker>
+
+    <a-marker type='pattern' src='pattern-pc.patt'>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="retro_computer/scene.gltf"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
