--- a/video/index.html
+++ b/video/index.html
@@ -44,7 +44,7 @@
                 src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191">
             </a-video> -->
             <a-video id="vid" loop="true" crossorigin
-                src="https://guaudog.github.io/video/videoplayback.mp4">
+                src="https://guaudog.github.io/video/videoplayback.webm">
             </a-video>
 
 
