--- a/video/index.html
+++ b/video/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>VIDEO 1</title>
+    <title>MP4</title>
 
   <!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -42,14 +42,18 @@ if(this.el.object3D.visible == true){
     <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - Check out the repository !
   </div>
   <a-scene embedded artoolkit='sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180' >
-    <a-assets>
+    <!-- <a-assets>
       <video id="vid" src="https://guaudog.github.io/video/videoplayback.webm" loop="true" crossorigin>
-    </a-assets>
+    </a-assets> -->
 
     <!-- <a-assets>
       <video id="vid" src="https://cdn.glitch.com/b62367d1-ceab-454b-b664-b032f995ed86%2FBig_Buck_Bunny_Trailer_1080p.ogv.720p.webm?1532370072191" loop="true" crossorigin>
     </a-assets> -->
    
+    <a-assets>
+      <video id="vid" src="https://guaudog.github.io/video/videoplayback.mp4" loop="true" crossorigin>
+    </a-assets>
+
     <a-marker id="memarker" preset="hiro" vidhandler>
       <a-plane position='0 2 -1' scale="2 2 2" width="2" rotation="-90 0 0" material='transparent:true;opacity: 0.7;src:#vid'></a-plane>
     </a-marker>
