--- a/Marker/index.html
+++ b/Marker/index.html
@@ -8,20 +8,15 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <!-- <a-marker type='pattern' url='https://guaudog.github.io//Marker/articuno/articuno.patt'>
-      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="articuno/scene.gltf"></a-entity>
-    </a-marker>
-     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.00009 0.00009 0.00009" rotation="90 0 0" gltf-model="../dragonite/scene.gltf"></a-entity>
-    </a-marker>
-    <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="../magnemite/scene.gltf"></a-entity>
-    </a-marker> -->
+    
+    <a-marker-camera preset='custom' type='pattern' url='assets/pattern-marker.patt'>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
+    </a-marker-camera>
     <a-marker preset="hiro">
-      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="retro_computer/scene.gltf"></a-entity>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="gameboy/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/gameboy/scene.gltf"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
