--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-  <title>P</title>
+  <title>A</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    
+
     <a-marker-camera preset='custom' type='pattern' url='assets/pattern-marker.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker-camera>
