--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,16 +1,16 @@
 <html>
 
 <head>
-  <title>A</title>
+  <title>b</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
 
-    <a-marker-camera preset='custom' type='pattern' url='assets/pattern-marker.patt'>
+    <a-marker preset='custom' type='pattern' url='assets/pattern-marker.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
-    </a-marker-camera>
+    </a-marker>
     <a-marker preset="hiro">
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
