--- a/Marker/index.html
+++ b/Marker/index.html
@@ -11,7 +11,7 @@
   <a-scene arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" embedded
     renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: true" gesture-detector id="scene">
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-pc.patt'>
+    <a-marker preset='custom' type='pattern' url='marker/pattern-Sin título-1.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
