--- a/video/index.html
+++ b/video/index.html
@@ -51,7 +51,7 @@ if(this.el.object3D.visible == true){
     </a-assets> -->
    
     <a-assets>
-      <video id="vid" src="https://guaudog.github.io/video/videoplayback.mp4" loop="true" crossorigin>
+      <video id="vid" src="https://guaudog.github.io/video/Tv.m4v" loop="true" crossorigin>
     </a-assets>
 
     <a-marker id="memarker" preset="hiro" vidhandler>
