--- a/video/index.html
+++ b/video/index.html
@@ -76,7 +76,7 @@ if(this.el.object3D.visible == true){
    
     <a-assets>
       <video id="vid" src="https://guaudog.github.io/video/Tv.m4v" loop="true" crossorigin>
-      <video id="video" src="https://youtu.be/giBPKvSWU9g" loop="true" crossorigin>
+      <video id="video" src="https://guaudog.github.io/video/video2.mp4" loop="true" crossorigin>
     </a-assets>
 
     <a-marker id="memarker" preset="hiro" vidhandler>
